trying to correct the mistake in the matricial method

--- a/rapports/Trouver F.tex
+++ b/rapports/Trouver F.tex
@@ -74,8 +74,12 @@
 	Etape 4 : Augmenter $A_n$ en $A_n'$\\
 	Etape 5 : Calculer $C_n'$ puis $P$\\
 
+	\subsubsection*{Le problème de cette méthode}
+	Le problème majeur est de trouver $A_n$. Cela peut demander beaucoup de temps et beaucoup de zones restent arbitraires.
+
 	\section{Trouver A}
 	\subsection{Méthode matricielle}
 	En gardant les notations précédentes et en appelant $G:=(g_j)_{j\in[1,n]}$ les valeurs à prendre sur les points considérés, on se ramène à $AC=G$.\\
 	On applique la même démarche que précédemment en s'arrêtant à $A_n$.
+
 \end{document}
