--- a/biblio/latex/bilbiographie.bib
+++ b/biblio/latex/bilbiographie.bib
@@ -1,23 +1,166 @@
-@article{ADN_RF,
-	author    = {Changchuan Yin and
-		Jiasong Wang},
-	title     = {A Novel Method for Comparative Analysis of {DNA} Sequences by Ramanujan-Fourier
-		Transform},
-	journal   = {CoRR},
-	volume    = {abs/1403.1523},
-	year      = {2014},
-	url       = {http://arxiv.org/abs/1403.1523},
-	archivePrefix = {arXiv},
-	eprint    = {1403.1523},
-	timestamp = {Mon, 13 Aug 2018 16:49:02 +0200},
-	biburl    = {https://dblp.org/rec/journals/corr/YinW14.bib},
-	bibsource = {dblp computer science bibliography, https://dblp.org}
+@article{markidis_old_new,
+	author    = {Stefano Markidis},
+	title     = {The Old and the New: Can physics-informed deep-learning replace traditional linear solvers?},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://www.frontiersin.org/articles/10.3389/fdata.2021.669097/full},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+@article{Lutjens-PCE-PINN,
+	author    = {Björn Lütjens, Catherine H. Crawford, Mark Veillette, Dava Newman},
+	title     = {PCE-PINNs Physics-informed nn for uncertainty propagation in ocean modeling},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2105.02939},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
 }
 
 
+@article{Bai-PINN,
+	author    = {Genming Bai, Ujjwal Koley, Siddhartha Mishra, Roberto Molinaro},
+	title     = {Physics Informed Neural Networks (PINNs) for approximating nonlinear dispersive PDEs},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2104.05584},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+
+@article{Cai-PINN-fluid_mech,
+	author    = {Shengze Cai, Zhiping Mao, Zhicheng Wang, Minglang Yin, George Em Karniadakis},
+	title     = {Physics-informed neural networks (PINNs) for fluid mechanics: A review},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2105.09506},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+
+@article{Rao-PINN-laminar-flow,
+	author    = {Chengping Rao, Hao Sun, Yang Liu},
+	title     = {Physics-informed deep learning for incompressible laminar flows},
+	journal   = {},
+	volume    = {},
+	year      = {2020},
+	url       = {https://arxiv.org/abs/2002.10558},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+
+@article{Chiu-CAN-PINN,
+	author    = {Pao-Hsiung Chiu, Jian Cheng Wong, Chinchun Ooi, My Ha Dao, Yew-Soon Ong},
+	title     = {CAN-PINN: A Fast Physics-Informed Neural Network Based on Coupled-Automatic-Numerical Differentiation Method},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2110.15832},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+@article{Jin-NSFnets,
+	author    = {Xiaowei Jin, Shengze Cai, Hui Li, George Em Karniadakis},
+	title     = {NSFnets (Navier-Stokes Flow nets): Physics-informed neural networks for the incompressible Navier-Stokes equations},
+	journal   = {},
+	volume    = {},
+	year      = {2020},
+	url       = {https://arxiv.org/abs/2003.06496},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+
+@article{Nabian-efficient-training-PINN,
+	author    = {Mohammad Amin Nabian, Rini Jasmine Gladstone, Hadi Meidani},
+	title     = {Efficient training of physics-informed neural networks via importance sampling},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2104.12325},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+@article{Blechschmidt-three-ways,
+	author    = {Jan Blechschmidt, Oliver G. Ernst},
+	title     = {Three Ways to Solve Partial Differential Equations with Neural Networks -- A Review},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2102.11802},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+@article{Psaros-Meta-PINN,
+	author    = {Apostolos F Psaros, Kenji Kawaguchi, George Em Karniadakis},
+	title     = {Meta-learning PINN loss functions},
+	journal   = {},
+	volume    = {},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2107.05544},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+
+@article{Raissi-DL-fluid,
+	author    = {Maziar Raissi, Alireza Yazdani, George Em Karniadakis},
+	title     = {Hidden Fluid Mechanics: A Navier-Stokes Informed Deep Learning Framework for Assimilating Flow Visualization Data},
+	journal   = {},
+	volume    = {},
+	year      = {2018},
+	url       = {https://arxiv.org/abs/1808.04327},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
 
 @article{ADN_DFT,
-	title = {A measure of DNA sequence similarity by Fourier Transform with applications on hierarchical clustering},
+	title = {PCE-PINNs Physics-informed nn for uncertainty propagation in ocean modeling},
 	journal = {Journal of Theoretical Biology},
 	volume = {359},
 	pages = {18-28},
