--- a/biblio/latex/Application biblio.tex
+++ b/biblio/latex/Application biblio.tex
@@ -10,10 +10,10 @@
 
 \begin{document}
 	\begin{center}
-		{\Large \textbf{Exemple de texte centré}}
+		{\Large \textbf{Bibliography}}
 	\end{center}
-	\cite{ADN_RF} exemple de citation
-	
+\text{Mild slop equations :} \cite{Mild1}, \cite{Mild2}, \cite{Mild3} and \cite{Mild4}\\
+\text{Neural networks :} \cite{markidis_old_new}, \cite{Lutjens-PCE-PINN}, \cite{Bai-PINN}, \cite{Cai-PINN-fluid_mech}, \cite{Rao-PINN-laminar-flow}, \cite{Chiu-CAN-PINN}, \cite{Jin-NSFnets}, \cite{Nabian-efficient-training-PINN}, \cite{Blechschmidt-three-ways}, \cite{Psaros-Meta-PINN}, \cite{Raissi-DL-fluid} and \cite{ADN_DFT}
 	\nocite{*}
 	\bibliographystyle{plain}
 	\bibliography{bilbiographie}
