--- a/biblio/latex/bilbiographie.bib
+++ b/biblio/latex/bilbiographie.bib
@@ -1,3 +1,61 @@
+
+@article{Mild1,
+	author    = {D. Porter},
+	title     = {The mild-slope equations: a unified theory},
+	journal   = {},
+	volume    = {},
+	year      = {2020},
+	url       = {https://www.cambridge.org/core/journals/journal-of-fluid-mechanics/article/mildslope-equations-a-unified-theory/9BD1AF9A631297264C003211024DF710},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+@article{Mild2,
+	author    = {D. Porter},
+	title     = {The mild-slope equations},
+	journal   = {},
+	volume    = {},
+	year      = {2003},
+	url       = {https://www.cambridge.org/core/journals/journal-of-fluid-mechanics/article/mildslope-equations/6C4E03E11A0189116A353EAFA3BF5A05},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+
+@article{Mild3,
+	author    = {P.G Chamberlain and D. Porter},
+	title     = {The modified mild-slope equation},
+	journal   = {},
+	volume    = {},
+	year      = {1995},
+	url       = {https://www.cambridge.org/core/journals/journal-of-fluid-mechanics/article/modified-mildslope-equation/B38A63443C51692DCCFC6C85796D5ACD},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
+@article{Mild4,
+	author    = {ASU İNAN and LALE BALA},
+	title     = {Numerical Modeling of Mild Slope Equation  with Finite Volume Method},
+	journal   = {},
+	volume    = {},
+	year      = {2008},
+	url       = {https://www.researchgate.net/publication/262323219_Numerical_modeling_of_mild_slope_equation_with_finite_volume_method},
+	archivePrefix = {},
+	eprint    = {},
+	timestamp = {},
+	biburl    = {},
+	bibsource = {}
+}
+
 @article{markidis_old_new,
 	author    = {Stefano Markidis},
 	title     = {The Old and the New: Can physics-informed deep-learning replace traditional linear solvers?},
@@ -171,31 +229,4 @@
 	author = {Changchuan Yin and Ying Chen and Stephen S.-T. Yau},
 	keywords = {Genome, Similarity distance, Phylogenetic trees, Even scaling},
 	abstract = {Multiple sequence alignment (MSA) is a prominent method for classification of DNA sequences, yet it is hampered with inherent limitations in computational complexity. Alignment-free methods have been developed over past decade for more efficient comparison and classification of DNA sequences than MSA. However, most alignmen.}
-}
-
-@inproceedings{RF_Thesis,
-	title={Ramanujan-Fourier Series and Applications},
-	author={Ryan Case},
-	year={2013}
-}
-
-
-@book{bergounioux, 
-	title = {Introduction au traitement mathématique des images—méthodes déterministes},
-	
-	book = {Mathématiques \& Applications (Berlin) [Mathematics \& Applications], 76. Springer, Heidelberg, 2015. xvii+241 pp. }}
-
-@book{baudoin,
-	author = { G. BAUDOIN et J.-F. BERCHER},
-	title = { Transformée de Fourier discrète}, ESIEE, date = {Novembre 2001, 14/03/2021 [dernière consultation].},
-	url = {https://perso.esiee.fr/$\sim$bercherj/New/polys/poly\_tfd.pdf}}
-
-@book{Malg,
-	author = {F. Malgouyres},
-	title =  {Signal, Fourier, Image. Université de Toulouse, 14/03/2021 [dernière consultation]. \\Disponible à https://www.math.univ-toulouse.fr/\~fmalgouy/enseignement/downloadSfi/poly\_sfi.pdf}}
-
-@book{SF,
-	author = {François de Marçay},
-	title = {Séries de Fourier - Université de Paris Sud, Département de mathématiques d'Orsay},
-	date = {Université de Paris Sud - Département de mathématiques d'Orsay},
 }
