--- a/differentiate/using_NN_for_solving_EDP.ipynb
+++ b/differentiate/using_NN_for_solving_EDP.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,40 @@
     "  keras.layers.Dense(10,activation='selu'),\n",
     "  keras.layers.Dense(1)\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " gaussian_noise (GaussianNoi  (None, 1)                0         \n",
+      " se)                                                             \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 10)                20        \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                110       \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 11        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 141\n",
+      "Trainable params: 141\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "multilayer_perceptron.summary()"
    ]
   },
   {
@@ -88,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -103,9 +137,9 @@
    "source": [
     "f0 = 1\n",
     "learning_rate = 0.01\n",
-    "training_steps = 5000\n",
+    "training_steps = 100\n",
     "batch_size = 100\n",
-    "display_step = 500\n",
+    "display_step = 10\n",
     "\n",
     "optimizer = tf.optimizers.SGD(lr=learning_rate)"
    ]
@@ -170,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +212,7 @@
      "output_type": "stream",
      "text": [
       "epoch: 0\n",
-      "loss: 1.778880 \n",
+      "loss: 0.055401 \n",
       "epoch: 1\n",
       "epoch: 2\n",
       "epoch: 3\n",
@@ -189,6 +223,7 @@
       "epoch: 8\n",
       "epoch: 9\n",
       "epoch: 10\n",
+      "loss: 0.055489 \n",
       "epoch: 11\n",
       "epoch: 12\n",
       "epoch: 13\n",
@@ -199,7 +234,7 @@
       "epoch: 18\n",
       "epoch: 19\n",
       "epoch: 20\n",
-      "loss: 0.125799 \n",
+      "loss: 0.057238 \n",
       "epoch: 21\n",
       "epoch: 22\n",
       "epoch: 23\n",
@@ -210,6 +245,7 @@
       "epoch: 28\n",
       "epoch: 29\n",
       "epoch: 30\n",
+      "loss: 0.061092 \n",
       "epoch: 31\n",
       "epoch: 32\n",
       "epoch: 33\n",
@@ -220,7 +256,7 @@
       "epoch: 38\n",
       "epoch: 39\n",
       "epoch: 40\n",
-      "loss: 0.111445 \n",
+      "loss: 0.060038 \n",
       "epoch: 41\n",
       "epoch: 42\n",
       "epoch: 43\n",
@@ -231,6 +267,7 @@
       "epoch: 48\n",
       "epoch: 49\n",
       "epoch: 50\n",
+      "loss: 0.060588 \n",
       "epoch: 51\n",
       "epoch: 52\n",
       "epoch: 53\n",
@@ -241,7 +278,7 @@
       "epoch: 58\n",
       "epoch: 59\n",
       "epoch: 60\n",
-      "loss: 0.096466 \n",
+      "loss: 0.063185 \n",
       "epoch: 61\n",
       "epoch: 62\n",
       "epoch: 63\n",
@@ -252,6 +289,7 @@
       "epoch: 68\n",
       "epoch: 69\n",
       "epoch: 70\n",
+      "loss: 0.064011 \n",
       "epoch: 71\n",
       "epoch: 72\n",
       "epoch: 73\n",
@@ -262,7 +300,7 @@
       "epoch: 78\n",
       "epoch: 79\n",
       "epoch: 80\n",
-      "loss: 0.079822 \n",
+      "loss: 0.063747 \n",
       "epoch: 81\n",
       "epoch: 82\n",
       "epoch: 83\n",
@@ -273,6 +311,7 @@
       "epoch: 88\n",
       "epoch: 89\n",
       "epoch: 90\n",
+      "loss: 0.059823 \n",
       "epoch: 91\n",
       "epoch: 92\n",
       "epoch: 93\n",
@@ -281,112 +320,7 @@
       "epoch: 96\n",
       "epoch: 97\n",
       "epoch: 98\n",
-      "epoch: 99\n",
-      "epoch: 100\n",
-      "loss: 0.086540 \n",
-      "epoch: 101\n",
-      "epoch: 102\n",
-      "epoch: 103\n",
-      "epoch: 104\n",
-      "epoch: 105\n",
-      "epoch: 106\n",
-      "epoch: 107\n",
-      "epoch: 108\n",
-      "epoch: 109\n",
-      "epoch: 110\n",
-      "epoch: 111\n",
-      "epoch: 112\n",
-      "epoch: 113\n",
-      "epoch: 114\n",
-      "epoch: 115\n",
-      "epoch: 116\n",
-      "epoch: 117\n",
-      "epoch: 118\n",
-      "epoch: 119\n",
-      "epoch: 120\n",
-      "loss: 0.084604 \n",
-      "epoch: 121\n",
-      "epoch: 122\n",
-      "epoch: 123\n",
-      "epoch: 124\n",
-      "epoch: 125\n",
-      "epoch: 126\n",
-      "epoch: 127\n",
-      "epoch: 128\n",
-      "epoch: 129\n",
-      "epoch: 130\n",
-      "epoch: 131\n",
-      "epoch: 132\n",
-      "epoch: 133\n",
-      "epoch: 134\n",
-      "epoch: 135\n",
-      "epoch: 136\n",
-      "epoch: 137\n",
-      "epoch: 138\n",
-      "epoch: 139\n",
-      "epoch: 140\n",
-      "loss: 0.085376 \n",
-      "epoch: 141\n",
-      "epoch: 142\n",
-      "epoch: 143\n",
-      "epoch: 144\n",
-      "epoch: 145\n",
-      "epoch: 146\n",
-      "epoch: 147\n",
-      "epoch: 148\n",
-      "epoch: 149\n",
-      "epoch: 150\n",
-      "epoch: 151\n",
-      "epoch: 152\n",
-      "epoch: 153\n",
-      "epoch: 154\n",
-      "epoch: 155\n",
-      "epoch: 156\n",
-      "epoch: 157\n",
-      "epoch: 158\n",
-      "epoch: 159\n",
-      "epoch: 160\n",
-      "loss: 0.084570 \n",
-      "epoch: 161\n",
-      "epoch: 162\n",
-      "epoch: 163\n",
-      "epoch: 164\n",
-      "epoch: 165\n",
-      "epoch: 166\n",
-      "epoch: 167\n",
-      "epoch: 168\n",
-      "epoch: 169\n",
-      "epoch: 170\n",
-      "epoch: 171\n",
-      "epoch: 172\n",
-      "epoch: 173\n",
-      "epoch: 174\n",
-      "epoch: 175\n",
-      "epoch: 176\n",
-      "epoch: 177\n",
-      "epoch: 178\n",
-      "epoch: 179\n",
-      "epoch: 180\n",
-      "loss: 0.086712 \n",
-      "epoch: 181\n",
-      "epoch: 182\n",
-      "epoch: 183\n",
-      "epoch: 184\n",
-      "epoch: 185\n",
-      "epoch: 186\n",
-      "epoch: 187\n",
-      "epoch: 188\n",
-      "epoch: 189\n",
-      "epoch: 190\n",
-      "epoch: 191\n",
-      "epoch: 192\n",
-      "epoch: 193\n",
-      "epoch: 194\n",
-      "epoch: 195\n",
-      "epoch: 196\n",
-      "epoch: 197\n",
-      "epoch: 198\n",
-      "epoch: 199\n"
+      "epoch: 99\n"
      ]
     }
    ],
@@ -575,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
