--- a/differentiate/NN_test_function_A_F.ipynb
+++ b/differentiate/NN_test_function_A_F.ipynb
@@ -245,6 +245,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Papier : 2019_A_unified_deep_artificial_neural_network_approach_to_PDE_in_complex_geometries.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -781,6 +788,13 @@
    "metadata": {},
    "source": [
     "## Method 3: g automatically respects the boundary conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "papier : 1997_Artificial_neural_networks_for_solving_ordinary_and_partial_differential_equations.pdf"
    ]
   },
   {
