ranger les documents dans le bon endroit

--- a/biblio/méthode IA/ML_to_solve_PDE/ML_to_solve_PDE.bib
+++ b/biblio/méthode IA/ML_to_solve_PDE/ML_to_solve_PDE.bib
@@ -27,3 +27,16 @@
 	author = {I.E. Lagaris, A. Likas, D.I. Fotiadis},
 	abstract = {This article describes a general method to solve a PDE with a neural network that will help construct another function already forced to satisfy the boundary conditions. It comes with 8 examples and draws a comparison to the Finite Difference Method.}
 }
+
+@article{CINT-Galerkin-2015,
+	author    = {Keith Rudd and Silvia Ferrari},
+	title     = {A constrained integration (CINT) approach to solving partial differential equations using artificial neural networks},
+	journal   = {Neurocomputing},
+	volume    = {155},
+	year      = {2015},
+	url       = {https://doi.org/10.1016/J.NEUCOM.2014.11.058},
+    abstract  = {il s'agit d'approximer la solution par une somme finie de fonctions Hilbertiennes \
+	(par exemple des polynomes trigonométriques ou de Tchebychev) et de séparer la partie satisfaisant les conditions aux limites \
+	et celle satisfaisant l'équation. Il s'agit ensuite d'approximer la partie satsfaisant les CL et d'obtenir une \
+	équation plus simple sur les poids de la base des vecteurs satisfaisant l'equation. \
+	Les résulats ont amélioré de façon significative le temps de calcul et l'erreur par rapport la méthode numérique.}
