F_function completed, dynamic_diff implemented. TODO: some comparison between the various method in terms of speed of differentiation

--- a/differentiate/NN_test_function_A_F.ipynb
+++ b/differentiate/NN_test_function_A_F.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,24 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "len(multilayer_perceptron.trainable_variables): 5\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('len(multilayer_perceptron.trainable_variables):',len(multilayer_perceptron.trainable_variables))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,24 +777,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "papier : 1997_Artificial_neural_networks_for_solving_ordinary_and_partial_differential_equations.pdf"
+    "article : 1997_Artificial_neural_networks_for_solving_ordinary_and_partial_differential_equations.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the fastest way to differentiate a sympy expr ?\n",
+    "\n",
+    "- see dynamic_diff.ipynb "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "diff_gradually is better. Should be kept to differentiate F and A.\n",
+    "\n",
+    "[En cours => dynamic programming]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other libraries than sympy? autograd,..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "import Polynomials.polynome4students_v2 as Pstud\n",
+    "from Polynomials.F_functions import F2D\n",
     "\n",
-    "frontier_coords = Pstud._set_coords_rectangle(1,1,40)\n",
+    "frontier_coords = Pstud._set_coords_rectangle(1,1,10)\n",
+    "F = F2D(frontier_coords,'xpy_real')\n",
     "\n",
-    "F_xpy_real = Pstud._set_polynome_xpy_numpy_real(frontier_coords)\n",
-    "F_expxpy_real = Pstud._set_polynome_expxpy_numpy_real(frontier_coords)\n",
-    "F_sinxpy_real = Pstud._set_polynome_sinxpy_numpy_real(frontier_coords)\n",
+    "F.dynamic_diff_2D([(0, 2)])\n",
+    "print('ok')\n",
     "\n",
-    "F_xpy_cmplx = Pstud._set_polynome_xpy_numpy_cmplx(frontier_coords)"
+    "# print(F.evaluate_derivative((0,0),(0,0)))\n",
+    "# print(F.dico_derivation.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TODO: compare different methods according to speed of differentiation"
    ]
   },
   {
