Mise à du jour du maillage

--- a/data_set/arcachon_plus_bathymetry/display_dataset.ipynb
+++ b/data_set/arcachon_plus_bathymetry/display_dataset.ipynb
@@ -122,10 +122,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "26b45c5cec5584c177fec2c5d6e38e0576778aca4be813fe579506cdcff3d90a"
+   "hash": "e5030792b3492f6b12d94f1f48beca3d8e59ec05fd59d0aaaa48e684281ed297"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.7.13 64-bit",
    "language": "python",
    "name": "python3"
   },
