--- a/data_set/Maillage.ipynb
+++ b/data_set/Maillage.ipynb
@@ -178,11 +178,11 @@
     "import pyvista as pv\n",
     "points = np.array([long,lat,depth]).T\n",
     "cloud = pv.PolyData(points)\n",
-    "grid = cloud.delaunay_2d(alpha=10)\n",
+    "grid = cloud.delaunay_2d(alpha=10)   # On utilise le Delaunay pour faire le maillage \n",
     "grid.plot(show_edges=True)\n",
     "#grid.plot(show_edges=True)\n",
-    "cells=grid.cell_points(0)\n",
-    "print(cells)"
+    "cell=grid.cell_points(0)             # test pour regarder le format du premier triangle obtenu \n",
+    "print(cell)"
    ]
   }
  ],
