--- a/data_set/Maillage.ipynb
+++ b/data_set/Maillage.ipynb
@@ -66,8 +66,8 @@
     "    lat = data[\"lat\"].to_numpy()\n",
     "\n",
     "    depth = depth\n",
-    "    long = (long - min(long))*1110*5\n",
-    "    lat = (lat - min(lat))*1110*5\n",
+    "    long = (long - min(long))*1110*5        # Changing scale\n",
+    "    lat = (lat - min(lat))*1110*5           \n",
     "    return long, lat, depth\n"
    ]
   },
@@ -178,10 +178,10 @@
     "import pyvista as pv\n",
     "points = np.array([long,lat,depth]).T\n",
     "cloud = pv.PolyData(points)\n",
-    "grid = cloud.delaunay_2d(alpha=10)   # On utilise le Delaunay pour faire le maillage \n",
+    "grid = cloud.delaunay_2d(alpha=10)   # We use the Delaunay method to make the mesh\n",
     "grid.plot(show_edges=True)\n",
     "#grid.plot(show_edges=True)\n",
-    "cell=grid.cell_points(0)             # test pour regarder le format du premier triangle obtenu \n",
+    "cell=grid.cell_points(0)             # Test to see the format of the first triangle obtained\n",
     "print(cell)"
    ]
   }
