Correction of the mesh

--- a/data_set/Mesh/Maillage_dataset.ipynb
+++ b/data_set/Mesh/Maillage_dataset.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "maritime_data = pd.read_csv(\"./Topography_arcachon/maritime_data.csv\", sep=\",\", header=2)\n",
-    "earth_data = pd.read_csv(\"./Topography_arcachon/earth_data.csv\", sep=\",\", header=3)"
+    "earth_data = pd.read_csv(\"./Topography_arcachon/earth_data copy.csv\", sep=\",\", header=3)"
    ]
   },
   {
